# rsaShit

./: .gitignore  CMakeLists.txt  DESIGN.md  Program.cs  README.md  main.cpp  rsaShit.sln
.github/workflows/: cmake-multi-platform.yml
Attacks/: IRsaAttack.cs  ShitSplitter.cs
Core/: Color.cs  EfficientFactorise.cs  Factoriser.cs  RSAState.cs
src/: bigint.cpp  bigint.hpp  help.cpp  help.hpp  repl.cpp  repl.hpp  rsa.cpp  rsa.hpp  session.hpp
src/attacks/: common_modulus.cpp  common_modulus.hpp  coppersmith.cpp  coppersmith.hpp  fermat.cpp  fermat.hpp  lowe.cpp  lowe.hpp  pminus1.cpp  pminus1.hpp  rho.cpp  rho.hpp  trial.cpp  wiener.cpp  wiener.hpp
src/utils/: parse.cpp  parse.hpp
